Orden dashboard soporte

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -233,7 +233,7 @@
 							    <select class="form-control input-sm" name="evento" id="evento">
 							    	<option value="">Seleccionar</option>
 							    	<option value="Falla">Falla</option>
-							    	<option value="Asesoría/Consulta">Asesoría/Consulta</option>
+							    	<option value="Asesoria / Consulta">Asesoría/Consulta</option>
 							    	<!-- <option value="Consultoría">Consultoría</option> -->
 							    	<option value="CTRL CAMBIOS / PROGRAMADO">CTRL CAMBIOS / PROGRAMADO</option>
 							    	<option value="Siniestro">Siniestro</option>
