--- a/views/informe.phtml
+++ b/views/informe.phtml
@@ -41,6 +41,25 @@
 
 	</div>
 
+
+	<!-- Modal -->
+	<div class="modal fade" id="modalDetalle" tabindex="-1" role="dialog" aria-labelledby="modalDetalleLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="modalDetalleLabel">Eventos en Proceso</h4>
+				</div>
+				<div class="modal-body">
+					<div id="detalle" style="font-size: 11px;"></div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
+					<!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- <div class="col-sm-6" id="promedio">
 	
 	</div>
