Un usuario puede ver solo las de su gerencia

--- a/views/informe.phtml
+++ b/views/informe.phtml
@@ -16,9 +16,10 @@
 				<select class="form-control" id="gerencia" name="gerencia">
 					<option value="" selected>Todos</option>
 					<option value="Lec">Lec</option>
-					<option value="Let">Let</option>
 					<option value="Leg">Leg</option>
 					<option value="Lep">Lep</option>
+					<option value="Ler">Ler</option>
+					<option value="Let">Let</option>
 				</select>
 			</div>
 			<button type="button" id="filtrar" class="btn btn-danger">Consultar</button>
