Se agregan los datos de conteo por ingeniero

--- a/media/css/informe.css
+++ b/media/css/informe.css
@@ -9,3 +9,7 @@ a.list-group-item, button.list-group-item {
     color: #777;
     background-color: #eee;
 }
+
+.cont:hover{
+	background-color: #ffd24d;
+}
