--- a/views/informe.phtml
+++ b/views/informe.phtml
@@ -42,6 +42,27 @@
 
 	</div>
 
+	<div class="row">
+
+		<div class="col-sm-3">
+			<table class="table table-bordered" id="tabla-conteo-gerencia" style="font-size: 11px;">
+				<thead>
+					<tr>
+						
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+		<div class="col-sm-5" id="table-conteo-ingeniero" style="font-size: 11px;">
+			
+		</div>
+	</div>
+
 
 	<!-- Modal -->
 	<div class="modal fade" id="modalDetalle" tabindex="-1" role="dialog" aria-labelledby="modalDetalleLabel">
