--- a/views/layouts/layout.phtml
+++ b/views/layouts/layout.phtml
@@ -84,7 +84,7 @@
 		<input type="hidden" id='puesto' value='<?= Session::getSession("puesto") ?>'>
 		<input type="hidden" id='role' value='<?= Session::getSession("role") ?>'>
 
-		<div class="container-fluid" id="body-layout">
+		<div class="container-fluid" style="padding-top: 65px;">
 			<?php include($this->body); ?>
 		</div>
 		<div id="notificacion-mensaje"></div>
