Listado de soportes atendidos por ingenieros

--- a/views/informe.phtml
+++ b/views/informe.phtml
@@ -44,7 +44,7 @@
 
 	<div class="row">
 
-		<div class="col-sm-3">
+		<div class="col-md-3 col-sm-12">
 			<table class="table table-bordered" id="tabla-conteo-gerencia" style="font-size: 11px;">
 				<thead>
 					<tr>
@@ -58,8 +58,22 @@
 			</table>
 		</div>
 
-		<div class="col-sm-6" id="table-conteo-ingeniero" style="font-size: 11px;">
-			
+		<div class="col-md-6 col-sm-12" style="font-size: 11px;">
+			<table class="table table-condensed" id="tabla-conteo-ingeniero" style="font-size: 11px;">
+				<thead>
+					<tr>
+						<th>Nombre</th>
+						<th>Turno</th>
+						<th>Lugar de Trabajo</th>
+						<th>CA</th>
+						<th>SA</th>
+						<th>Total</th>
+					</tr>
+				</thead>
+				<tbody>
+					
+				</tbody>
+			</table>
 		</div>
 	</div>
 
