Detalle a eventos en proceso modal

--- a/views/informe.phtml
+++ b/views/informe.phtml
@@ -32,6 +32,23 @@
 	<div class="col-sm-12">
 		<p class='h4'>Total eventos: <strong id='total'></strong></p>
 	</div>
+
+	<div class="col-sm-12" id="" style="font-size: 11px;" style="display: none;">
+		<table class="table table-condensed text-center" id="table-proceso" style="display: none;">
+			<thead>
+				<tr>
+					<td colspan="2">Eventos En Proceso - <strong id="p_total">0</strong></td>
+				</tr>
+				<tr>
+					<td>Con Afectación - <strong id="p_ca">0</strong></td>
+					<td>Sin Afectación - <strong id="p_sa">0</strong></td>
+				</tr>
+			</thead>
+			<tbody>
+				
+			</tbody>
+		</table>
+	</div>
 	
 	<div class="col-sm-12" id="contenido" style="font-size: 11px;">
 		
