--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -17,7 +17,7 @@
 						<th>Detalle</th>
 						<th>No Reporte</th>
 						<th>Ingeniero</th>
-						<th>Asunto</th>
+						<th>Evento</th>
 						<th>Estatus</th>
 						<th>Impacto</th>
 						<th>Equipo</th>
