--- a/views/informe.phtml
+++ b/views/informe.phtml
@@ -33,31 +33,105 @@
 		<p class='h4'>Total eventos: <strong id='total'></strong></p>
 	</div>
 
-	<div class="col-sm-12" id="" style="font-size: 11px;" style="display: none;">
-		<table class="table table-condensed text-center" id="table-proceso" style="display: none;">
-			<thead>
-				<tr>
-					<td colspan="2">Eventos En Proceso - <strong id="p_total">0</strong></td>
-				</tr>
-				<tr>
-					<td>Con Afectación - <strong id="p_ca">0</strong></td>
-					<td>Sin Afectación - <strong id="p_sa">0</strong></td>
-				</tr>
-			</thead>
-			<tbody>
-				
-			</tbody>
-		</table>
-	</div>
-	
-	<div class="col-sm-12" id="contenido" style="font-size: 11px;">
+
+	<div class="row">
+		<div class="col-md-5 col-sm-12" id="" style="font-size: 11px;">
+			<table class="table table-condensed afectacion" id="table-proceso">
+				<thead class="text-center">
+					<tr class="bg-proceso">
+						<td colspan="2" data-est='En Proceso' data-afe='' data-eve=''>
+							<h4>Eventos En Proceso - <strong id="p_total">0</strong></h4>
+						</td>
+					</tr>
+					<tr>
+						<td class="bg-danger" data-est='En Proceso' data-afe='ca' data-eve=''>
+							<h5>CON AFECTACIÓN - <strong id="p_ca">0</strong></h5>
+						</td>
+						<td class="bg-success" data-est='En Proceso' data-afe='sa' data-eve=''>
+							<h5>SIN AFECTACIÓN - <strong id="p_sa">0</strong></h5>
+						</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td data-est='En Proceso' data-afe='ca' data-eve='ASESORIA / CONSULTA'>
+							ASESORIA / CONSULTA - <strong id="p_ca_as">0</strong>
+						</td>
+						<td data-est='En Proceso' data-afe='sa' data-eve='ASESORIA / CONSULTA'>
+							ASESORIA / CONSULTA - <strong id="p_sa_as">0</strong>
+						</td>
+					</tr>
+					<tr>
+						<td data-est='En Proceso' data-afe='ca' data-eve='CTRL CAMBIOS / PROGRAMADO'>
+							CTRL CAMBIOS / PROGRAMADO - <strong id="p_ca_ct">0</strong>
+						</td>
+						<td data-est='En Proceso' data-afe='sa' data-eve='CTRL CAMBIOS / PROGRAMADO'>
+							CTRL CAMBIOS / PROGRAMADO - <strong id="p_sa_ct">0</strong>
+						</td>
+					</tr>
+					<tr>
+						<td data-est='En Proceso' data-afe='ca' data-eve='FALLA'>
+							FALLA - <strong id="p_ca_fa">0</strong>
+						</td>
+						<td data-est='En Proceso' data-afe='sa' data-eve='FALLA'>
+							FALLA - <strong id="p_sa_fa">0</strong>
+						</td>
+					</tr>
+					<tr>
+						<td data-est='En Proceso' data-afe='ca' data-eve='REFACCIÓN'>
+							REFACCIÓN - <strong id="p_ca_re">0</strong>
+						</td>
+						<td data-est='En Proceso' data-afe='sa' data-eve='REFACCIÓN'>
+							REFACCIÓN - <strong id="p_sa_re">0</strong>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+		<div class="col-md-5 col-sm-12" id="" style="font-size: 11px;">
+			<table class="table table-condensed afectacion" id="table-liquidado">
+				<thead class="text-center">
+					<tr class="bg-primary">
+						<td colspan="2"><h4>Eventos Liquidados - <strong id="l_total">0</strong></h4></td>
+					</tr>
+					<tr>
+						<td class="bg-danger" ><h5>CON AFECTACIÓN - <strong id="l_ca">0</strong></h5></td>
+						<td class="bg-success"><h5>SIN AFECTACIÓN - <strong id="l_sa">0</strong></h5></td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>ASESORIA / CONSULTA - <strong id="l_ca_as">0</strong></td>
+						<td>ASESORIA / CONSULTA - <strong id="l_sa_as">0</strong></td>
+					</tr>
+					<tr>
+						<td>CTRL CAMBIOS / PROGRAMADO - <strong id="l_ca_ct">0</strong></td>
+						<td>CTRL CAMBIOS / PROGRAMADO - <strong id="l_sa_ct">0</strong></td>
+					</tr>
+					<tr>
+						<td>FALLA - <strong id="l_ca_fa">0</strong></td>
+						<td>FALLA - <strong id="l_sa_fa">0</strong></td>
+					</tr>
+					<tr>
+						<td>REFACCIÓN - <strong id="l_ca_re">0</strong></td>
+						<td>REFACCIÓN - <strong id="l_sa_re">0</strong></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+		<div class="col-md-2 col-sm-12" id="contenido" style="font-size: 11px;">
 		
-		<div class="col-sm-3 itm" id='Proceso'></div>
-		<div class="col-sm-3 itm" id='Liquidado'></div>
-		<div class="col-sm-3 itm" id='Gerencias'></div>
-		<div class="col-sm-3 itm" id='Promedio'></div>
+			<!-- <div class="col-sm-3 itm" id='Proceso'></div> -->
+			<!-- <div class="col-sm-3 itm" id='Liquidado'></div> -->
+			<!-- <div class="col-sm-3 itm" id='Gerencias'></div> -->
+			<div class="itm" id='Promedio'></div>
+
+		</div>
 
 	</div>
+
 
 	<div class="row">
 
@@ -97,7 +171,7 @@
 
 	<!-- Modal -->
 	<div class="modal fade" id="modalDetalle" tabindex="-1" role="dialog" aria-labelledby="modalDetalleLabel">
-		<div class="modal-dialog" role="document">
+		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
