Se agrega siniestro al dashboard

--- a/views/informe.phtml
+++ b/views/informe.phtml
@@ -85,6 +85,14 @@
 							REFACCIÓN <strong id="p_sa_re">0</strong>
 						</td>
 					</tr>
+					<tr>
+						<td data-est='En Proceso' data-afe='ca' data-eve='SINIESTRO'>
+							SINIESTRO <strong id="p_ca_si">0</strong>
+						</td>
+						<td data-est='En Proceso' data-afe='sa' data-eve='SINIESTRO'>
+							SINIESTRO <strong id="p_sa_si">0</strong>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
@@ -116,6 +124,10 @@
 					<tr>
 						<td>REFACCIÓN <strong id="l_ca_re">0</strong></td>
 						<td>REFACCIÓN <strong id="l_sa_re">0</strong></td>
+					</tr>
+					<tr>
+						<td>SINIESTRO <strong id="l_ca_si">0</strong></td>
+						<td>SINIESTRO <strong id="l_sa_si">0</strong></td>
 					</tr>
 				</tbody>
 			</table>
