salto de linea ctrl

--- a/views/informe.phtml
+++ b/views/informe.phtml
@@ -63,10 +63,10 @@
 					</tr>
 					<tr>
 						<td data-est='En Proceso' data-afe='ca' data-eve='CTRL CAMBIOS / PROGRAMADO'>
-							CTRL CAMBIOS / PROGRAMADO <strong id="p_ca_ct">0</strong>
+							CTRL CAMBIOS /<br/> PROGRAMADO <strong id="p_ca_ct">0</strong>
 						</td>
 						<td data-est='En Proceso' data-afe='sa' data-eve='CTRL CAMBIOS / PROGRAMADO'>
-							CTRL CAMBIOS / PROGRAMADO <strong id="p_sa_ct">0</strong>
+							CTRL CAMBIOS /<br/> PROGRAMADO <strong id="p_sa_ct">0</strong>
 						</td>
 					</tr>
 					<tr>
@@ -114,8 +114,8 @@
 						<td>ASESORIA / CONSULTA <strong id="l_sa_as">0</strong></td>
 					</tr>
 					<tr>
-						<td>CTRL CAMBIOS / PROGRAMADO <strong id="l_ca_ct">0</strong></td>
-						<td>CTRL CAMBIOS / PROGRAMADO <strong id="l_sa_ct">0</strong></td>
+						<td>CTRL CAMBIOS /<br/> PROGRAMADO <strong id="l_ca_ct">0</strong></td>
+						<td>CTRL CAMBIOS /<br/> PROGRAMADO <strong id="l_sa_ct">0</strong></td>
 					</tr>
 					<tr>
 						<td>FALLA <strong id="l_ca_fa">0</strong></td>
