Nuevo calor impacto 'Riesgo Potencial'

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -253,6 +253,7 @@
 								    	<option value="CTRL CAMBIOS / PROGRAMADO">CTRL CAMBIOS / PROGRAMADO</option>
 								    	<option value="Siniestro">Siniestro</option>
 								    	<option value="Refacción">Refacción</option>
+								    	<option value="Riesgo Potencial">Riesgo Potencial</option>
 								    </select>
 								</div>
 							</div>
