Se agrega el campo tiempo en el listado de eventos

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -36,6 +36,7 @@
 						<th>Aviso a Soporte</th>
 						<th>Inicio de Soporte</th>
 						<th>Fin de Soporte</th>
+						<th>Min Atención</th>
 						<th>Solución</th>
 
 
@@ -253,7 +254,6 @@
 								    	<option value="CTRL CAMBIOS / PROGRAMADO">CTRL CAMBIOS / PROGRAMADO</option>
 								    	<option value="Siniestro">Siniestro</option>
 								    	<option value="Refacción">Refacción</option>
-								    	<option value="Riesgo Potencial">Riesgo Potencial</option>
 								    </select>
 								</div>
 							</div>
@@ -298,6 +298,7 @@
 										<option value="IMPSA">IMPSA</option>
 										<option value="MIMPCA">MIMPCA</option>
 										<option value="MIMPSA">MIMPSA</option>
+										<option value="Riesgo Potencial">Riesgo Potencial</option>
 								    </select>
 								</div>
 								
