Cambio de Riesgo Potencial a RPSA

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -298,7 +298,7 @@
 										<option value="IMPSA">IMPSA</option>
 										<option value="MIMPCA">MIMPCA</option>
 										<option value="MIMPSA">MIMPSA</option>
-										<option value="Riesgo Potencial">Riesgo Potencial</option>
+										<option value="RPSA">RPSA</option>
 								    </select>
 								</div>
 								
