CLLI requerido solo para Ler y Let

--- a/views/layouts/layout.phtml
+++ b/views/layouts/layout.phtml
@@ -83,6 +83,7 @@
 
 		<input type="hidden" id='puesto' value='<?= Session::getSession("puesto") ?>'>
 		<input type="hidden" id='role' value='<?= Session::getSession("role") ?>'>
+		<input type="hidden" id='siglas' value='<?= Session::getSession("siglas") ?>'>
 
 		<div class="container-fluid" style="padding-top: 65px;">
 			<?php include($this->body); ?>
