--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -381,7 +381,7 @@
 								</div>
 
 								<div class="form-group col-sm-12 col-md-2">
-								    <label for="area">Area</label>
+								    <label for="area">División</label>
 								    <select class="form-control input-sm" name="area" id="area">
 								    	<option value="">Seleccionar</option>
 								    	<option value='Metro'>Metro</option>
