Se agrega Red a causa de falla

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -365,6 +365,7 @@
 										<option value="Mantenimiento">Mantenimiento</option>
 										<option value="No se Encontro Falla">No se Encontro Falla</option>
 										<option value="Otro Proveedor">Otro Proveedor</option>
+										<option value="Red">Red</option>
 										<option value="Siniestro">Siniestro</option>
 										<option value="Software">Software</option>
 								    </select>
