Se agrega campo asistencia proveedor (sitio / remoto)

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -416,6 +416,15 @@
 								    <input type="text" class="form-control input-sm" name="fecha_fin_escalado" id="fecha_fin_escalado">
 								</div>
 
+								<div class="form-group col-sm-12 col-md-4">
+								    <label for="asistencia_proveedor">Asistencia</label>
+								    <select class="form-control input-sm" name="asistencia_proveedor" id="asistencia_proveedor">
+								    	<option value="">Seleccionar</option>
+								    	<option value='Sitio'>Sitio</option>
+										<option value='Remoto'>Remoto</option>
+								    </select>
+								</div>
+
 								<div class="form-group col-sm-12 col-md-12">
 								    <label for="solucion_escalado">Solución de Proveedor</label>
 								    <textarea class="form-control" name="solucion_escalado" id="solucion_escalado" cols="10" rows="1"></textarea>
