migracion a maquina virtual

--- a/views/layouts/login.phtml
+++ b/views/layouts/login.phtml
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>LEP</title>
+		<title>LE</title>
 		<link rel="shortcut icon" type="image/ico" href="<?=$this->pathMedia?>images/favicon.ico"/>
 		<link rel="stylesheet" href="<?=$this->pathMedia?>librerias/Bootstrap/Bootstrap3.3.7/dist/css/bootstrap.min.css"/>
 		<link rel="stylesheet" href="<?=$this->pathMedia?>librerias/font-awesome-4.7.0/css/font-awesome.min.css"/>
@@ -36,9 +36,9 @@
 	</head>
 	<body>
 		<div class="container">
-			
+			<?php $host = Config::$configuration->get('host'); ?>
 			<center> <img src="<?=$this->pathMedia?>images/logo.png" border="0" width="180" height="80" align="center" title="TELMEX está contigo"></img>
-			<h5>Soporte Técnico LEP</h5></center>
+			<h5>Soporte Técnico LE</h5></center>
 			<form class="form-signin" id='form-login'>
 				<div id="err-msg"></div>
 				<label for="inputEmail" class="sr-only">Usuario</label>
@@ -47,7 +47,17 @@
 				<input type="password" id="passwd" name="passwd" class="form-control" placeholder="Contraseña" required="">
 				<div class="checkbox">
 				</div>
-				<button class="btn btn-lg btn-warning btn-block" id="btn-login">Acceder</button>
+
+				<?php if( $host !== "http://10.205.51.78" ): ?>
+				<div id="err-msg">
+					<p style="font-size: 12px">El sistema se ha migrado a un ambiente virtual para mejorar el rendimiento, por favor ingrese desde esta liga: <a href="http://10.205.51.78/soporte">http://10.205.51.78/soporte</a> <br> Pronto dejará de funcionar este servidor, guarde la nueva ruta en su navegador.</p>
+				</div>
+				<?php endif; ?>
+
+				<?php if( $host === "http://10.205.51.78" or $host === "http://localhost" ): ?>
+					<button class="btn btn-lg btn-warning btn-block" id="btn-login">Acceder</button>
+				<?php endif; ?>
+
 			</form>	
 			<center><p>Copyright &copy; Telmex. All rights reserved.</p></center>
 		</div>
