Se define que es inventario de refacciones

--- a/views/inventario_acceso.phtml
+++ b/views/inventario_acceso.phtml
@@ -11,7 +11,7 @@
 		    <thead>
 		        <tr>
 		        	<th class="text-center">División</th>
-		        	<th class="text-center" colspan="5" >Inventario</th>
+		        	<th class="text-center" colspan="5" >Inventario de Refacciones</th>
 		        </tr>
 		    </thead>
 		    <tbody class="text-12">
