--- a/views/layouts/layout.phtml
+++ b/views/layouts/layout.phtml
@@ -84,6 +84,7 @@
 		<input type="hidden" id='puesto' value='<?= Session::getSession("puesto") ?>'>
 		<input type="hidden" id='role' value='<?= Session::getSession("role") ?>'>
 		<input type="hidden" id='siglas' value='<?= Session::getSession("siglas") ?>'>
+		<input type="hidden" id='ni' value='<?= Session::getSession("ni") ?>'>
 
 		<div class="container-fluid" style="padding-top: 65px;">
 			<?php include($this->body); ?>
